--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,6 +83,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  /* font-family: 'Kanit', sans-serif;
+  font-family: 'Roboto Mono', monospace; */
 }
 
 body {
