--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,15 @@
 :root {
+  /* FONTS */
   --font-kanit: "Kanit", sans-serif;
   --font-roboto-mono: "Roboto Mono", monospace;
+  /* SIZE */
+  --content-size: 100%;
+  /* COLORS */
+  --bg-color: #272a2e;
+  --white: #ffffff;
+  --black: #000;
+  --grey: #545454;
+  --preset-color: #b3b3b3;
 }
 
 * {
@@ -13,4 +22,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+ul {
+  list-style: none;
 }
