--- a/components/PageContainer/pageContainer.module.css
+++ b/components/PageContainer/pageContainer.module.css
@@ -24,6 +24,7 @@
 }
 
 .blockWrapper {
+  composes: flexRowBlock;
   width: 100vw;
   height: fit-content;
 }
@@ -31,7 +32,6 @@
 .sidebar {
   width: 420px;
   padding: 80px 0 0 100px;
-  /* background-image: url(LH_BG_2.png); */
   background-image: url(../../public/LH_BG_2.png);
   background-size: cover;
 }
@@ -49,6 +49,7 @@
 }
 
 .contentBox {
+  composes: flexColumnBlock;
   width: calc(100vw - 420px);
   height: fit-content;
   padding: 92px 114px 92px 135px;
@@ -56,5 +57,6 @@
 }
 
 .contentText {
+  composes: mainRobotoParagraph;
   margin-bottom: 16px;
 }
