--- a/components/ServiceCard/serviceCard.module.css
+++ b/components/ServiceCard/serviceCard.module.css
@@ -1,5 +1,28 @@
-.arrowBlock 
-/* = styled.div` */ {
+.imageItem {
+  composes: flexColumnBlock from '../PageContainer/pageContainer.module.css';
+  position: relative;
+  width: 275px;
+  height: 355px;
+  margin-bottom: 24px;
+  background: #272a2e;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.imageItem:hover .cardWrapper {
+  top: 0px;
+  padding-top: 32px;
+}
+
+.imageItem:hover .cardWrapper ul {
+  opacity: 1;
+}
+
+.imageItem:hover .arrowBlock {
+  transform: rotate(-45deg);
+}
+
+.arrowBlock {
   position: absolute;
   bottom: 10px;
   right: 10px;
@@ -20,7 +43,7 @@
   width: 275px;
   height: 355px;
   padding: 32px 40px 8px 24px;
-  padding: 17px 40px 8px 24px;
+  padding: 17px 40px 8px 26px;
   background: #272a2e;
   transition: top 0.3s linear 0s, padding-top 0.03s linear 0s;
 }
@@ -40,7 +63,12 @@
 .cardWrapper li {
   margin-bottom: 4px;
 }
-` .serviceDescription {
+
+.descriptionBlock {
+  position: relative;
+}
+
+.serviceDescription {
   position: relative;
   padding-left: 16px;
   margin-bottom: 16px;
@@ -49,18 +77,15 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  /* or 150% */
   letter-spacing: 0.02em;
   color: #ffffff;
 }
 
-.serviceDescription:before {
-  content: '';
-  display: inline-block;
+.colorMarker {
   position: absolute;
   left: -4px;
   top: 7px;
-  /* background-color: ${(props) => (props.color ? props.color : 'white')};  */
   width: 8px;
   height: 8px;
+  background-color: white;
 }
