--- a/components/PageContainer/pageContainer.module.css
+++ b/components/PageContainer/pageContainer.module.css
@@ -27,13 +27,27 @@
   composes: flexRowBlock;
   width: 100vw;
   height: fit-content;
+  /* ----- */
+  background-color: #17191d;
 }
 
 .sidebar {
   width: 420px;
   padding: 80px 0 0 100px;
-  background-image: url(../../public/LH_BG_2.png);
-  background-size: cover;
+  /* ----- */
+  /* background-color: #17191d; */
+  position: relative;
+}
+
+.sidebar::after {
+  content: '';
+  width: 1px;
+  background: #fff;
+  /* height: var(--height); */
+  height: 39vh;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .title {
@@ -54,6 +68,7 @@
   height: fit-content;
   padding: 92px 114px 92px 135px;
   background: #17191d;
+  z-index: 2;
 }
 
 .contentText {
