--- a/pages/audits/styles.module.css
+++ b/pages/audits/styles.module.css
@@ -1,17 +1,32 @@
+.imageWrapper {
+  position: relative;
+  width: 100%;
+  height: 378px;
+  overflow: hidden;
+}
+
 .auditsText {
   composes: contentText from '../../components/PageContainer/pageContainer.module.css';
+  margin-bottom: 32px;
+  padding-top: 24px;
 }
 
 .auditsTitle {
   composes: subtitle from '../../components/PageContainer/pageContainer.module.css';
+  margin-bottom: 16px;
 }
 
 .auditsCard {
   width: 100%;
   height: fit-content;
-  padding: 24px 24px 0;
+  padding: 24px 0 0;
+  margin-bottom: 32px;
   border: 1px solid #393939;
   background: #1b1d21;
+}
+
+.auditsCard > div {
+  padding: 0 24px 0;
 }
 
 .auditsSubtitle {
@@ -21,16 +36,56 @@
   font-size: 18px;
 }
 
+.auditsCardText {
+  composes: contentText from '../../components/PageContainer/pageContainer.module.css';
+  margin-bottom: 24px;
+}
+
 .auditsCardLink {
-  /* width: 100%;
-  height: fit-content; */
+  display: flex;
+  flex-direction: column;
   padding: 24px;
   background: #272a2e;
 }
 
 .auditsCardLinkItem {
-  /* width: 100%;
-  height: fit-content; */
-  padding: 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 24px 0;
+  cursor: pointer;
+}
+
+.linkItemTitle {
+  composes: contentText from '../../components/PageContainer/pageContainer.module.css';
+  margin-bottom: 0;
+  color: #ffffff;
+}
+
+.linkItemBlock {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 24px 0;
+  cursor: pointer;
   border-bottom: 1px solid #393939;
+}
+
+.linkItemBlock:last-of-type {
+  border-bottom: none;
+}
+
+.linkItemText {
+  composes: linkItemTitle;
+  margin-right: 8px;
+}
+/* --- make component! */
+.signBlock {
+  width: 16px;
+  background-image: url(../../public/plus_v.svg), url(../../public/plus_h.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: height 0.2s ease-out;
+  color: red;
 }
