--- a/components/PageContainer/pageContainer.module.css
+++ b/components/PageContainer/pageContainer.module.css
@@ -19,6 +19,7 @@
   color: #b3b3b3;
 }
 .mainKatinParagraph {
+  composes: mainRobotoParagraph;
   font-family: var(--font-kanit);
   color: #ffffff;
 }
@@ -32,6 +33,8 @@
 }
 
 .sidebar {
+  display: flex;
+  align-items: start;
   width: 420px;
   padding: 80px 0 0 100px;
   /* ----- */
@@ -84,4 +87,19 @@
   line-height: 24px;
   letter-spacing: 0.02em;
   color: #ffffff;
+}
+
+.titleBlock {
+  display: flex;
+  align-items: center;
+}
+
+.linkBlock {
+  margin-right: 24px;
+  width: 32px;
+  height: 32px;
+  background-image: url(/back_Button.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
 }
