--- a/pages/platform/id.module.css
+++ b/pages/platform/id.module.css
@@ -1,47 +1,16 @@
-.desc {
-  color: #b3b3b3;
-  margin: 0 0 30px 0;
-  font-family: "Roboto Mono", monospace;
-  font-size: 16px;
-  line-height: 1.6;
-}
-
-.headText {
-  font-family: "Kanit", sans-serif;
-  color: #fff;
-  font-size: 20px;
-  margin: 25px 0;
-}
-
-.imageContainer {
-  position: absolute;
-  right: 10px;
-  top: 23px;
-}
-
-.imageDiv {
-  background-image: url("../../public/cassesArrowA.png");
-  background-size: cover;
-  background-position: center;
-  width: 15px;
-  height: 15px;
-  background-repeat: no-repeat;
-  transition: all 0.2s ease-in-out;
-}
-
 /* Technology Stack */
 .listContainer {
   display: flex;
   justify-content: space-between;
-  border-bottom: 2px solid #393939;
+  border-bottom: 2px solid var(--border-grey);
   width: 100%;
   flex-wrap: wrap;
   padding: 20px 0px;
 }
 
 .titleList {
-  font-family: "Roboto Mono", monospace;
-  color: #b3b3b3;
+  font-family: var(--font-roboto-mono);
+  color: var(--preset-color);
   flex-basis: 50%;
   flex-grow: 1;
   font-weight: 400;
@@ -58,11 +27,11 @@
 }
 
 .itemList {
-  font-family: "Roboto Mono", monospace;
+  font-family: var(--font-roboto-mono);
   font-weight: 500;
   font-size: 14px;
   line-height: 24px;
-  color: #ffffff;
+  color: var(--white);
 }
 
 .listContainer:last-child {
@@ -73,45 +42,7 @@
 .listContainer:first-of-type {
   padding-top: 0;
 }
-/* CustomReactMarkdownProps  Action list */
-
-.action {
-  padding-left: 40px;
-  list-style-type: disc;
-  margin: 0 0 30px 0;
-}
-
-.actionList::marker {
-  color: #b3b3b3;
-}
-
-.actionListItem {
-  color: #b3b3b3;
-  font-family: "Roboto Mono", monospace;
-  font-size: 16px;
-  line-height: 1.6;
-}
-
-/* Link  */
-
-.link {
-  display: inline-block;
-  width: 100%;
-  padding: 13px 25px;
-  color: #fff;
-  border: 1px solid #393939;
-  text-decoration: none;
-  font-family: "Roboto Mono", monospace;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
-  position: relative;
-}
 
 .container {
   width: 100%;
-}
-
-.link:hover .imageDiv {
-  transform: rotate(-45deg);
 }
