--- a/pages/platforms/PageContainer/contain.module.css
+++ b/pages/platforms/PageContainer/contain.module.css
@@ -11,7 +11,7 @@
   justify-content: flex-start;
   width: 420px;
   padding: 80px 0 0 100px;
-  background-image: url("../../public/LH_BG_2.png");
+  background-image: url("../../../public/LH_BG_2.png");
   background-size: cover;
 }
 .content {
@@ -41,4 +41,12 @@
   background: var(--bg-color);
   width: 32px;
   height: 32px;
+}
+
+.btnGoBack {
+  width: 32px;
+  height: 32px;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
