--- a/components/PageContainer/pageContainer.module.css
+++ b/components/PageContainer/pageContainer.module.css
@@ -44,13 +44,15 @@
 
 .sidebar::after {
   content: '';
-  width: 1px;
-  background: #fff;
-  /* height: var(--height); */
-  height: 39vh;
   position: absolute;
   right: 0;
   top: 0;
+  width: 1px;
+  height: 100%;
+  /* height: 39vh; */
+  /* height: var(--height); 
+   background: #fff; */
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .title {
