--- a/components/ContactUs/styles.module.css
+++ b/components/ContactUs/styles.module.css
@@ -33,3 +33,26 @@
     background-position-x: right;
   }
 }
+
+.overlayClass {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.75);
+  z-index: 3;
+}
+
+.contentClass {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  max-width: 100vw;
+  padding: 0;
+  border: none;
+  border-radius: 0;
+  overflow-x: hidden;
+  z-index: 99;
+}
