--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 :root {
   /* FONTS */
-  --font-kanit: "Kanit", sans-serif;
-  --font-roboto-mono: "Roboto Mono", monospace;
+  --font-kanit: 'Kanit', sans-serif;
+  --font-roboto-mono: 'Roboto Mono', monospace;
   /* SIZE */
   --content-size: 100%;
   /* COLORS */
@@ -26,6 +26,11 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+body.modal-open {
+  height: 100vh;
+  overflow-y: hidden;
 }
 
 ul {
