--- a/components/HeaderSmall/styles.module.css
+++ b/components/HeaderSmall/styles.module.css
@@ -13,12 +13,7 @@
   cursor: pointer;
 }
 
-.overlayClass {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(255, 255, 255, 0.75);
-  z-index: 3;
+.contentClass {
+  composes: allToZero from '../ContactUs/styles.module.css';
+  z-index: 99;
 }
