--- a/components/PageContainer/pageContainer.module.css
+++ b/components/PageContainer/pageContainer.module.css
@@ -42,18 +42,15 @@
   /* background-color: #17191d; */
 }
 
-.sidebar::after {
+/* .sidebar::after {
   content: "";
   position: absolute;
   right: 0;
   top: 0;
   width: 1px;
   height: 100%;
-  /* height: 39vh; */
-  /* height: var(--height); 
-   background: #fff; */
   background-color: rgba(255, 255, 255, 0.3);
-}
+} */
 
 .title {
   max-width: 272px;
