--- a/components/PageContainer/pageContainer.module.css
+++ b/components/PageContainer/pageContainer.module.css
@@ -42,15 +42,15 @@
   /* background-color: #17191d; */
 }
 
-/* .sidebar::after {
-  content: "";
+.sidebar::after {
+  content: '';
   position: absolute;
   right: 0;
   top: 0;
   width: 1px;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.3);
-} */
+}
 
 .title {
   max-width: 272px;
