--- a/components/services/styles.module.css
+++ b/components/services/styles.module.css
@@ -28,12 +28,26 @@
   cursor: pointer;
 }
 
+.arrowBlock {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  width: 13px;
+  height: 13px;
+  background-image: url(../../public/arrow_rb.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: transform 0.2s linear;
+  transform: rotate(0deg);
+}
+
 .linkItem .arrowBlock {
   position: static;
 }
 
 .arrowBlockServ {
-  composes: arrowBlock from '../../components/ServiceCard/serviceCard.module.css';
+  /* composes: arrowBlock from '../../components/ServiceCard/serviceCard.module.css'; */
+  composes: arrowBlock;
   position: static;
 }
 
