--- a/components/ContactForm/contactForm.module.css
+++ b/components/ContactForm/contactForm.module.css
@@ -100,6 +100,11 @@
   color: #eb3795;
 }
 
+.alarmMessageHide {
+  composes: alarmMessage;
+  opacity: 0;
+}
+
 .formText {
   composes: mainRobotoParagraph from '../../components/PageContainer/pageContainer.module.css';
   margin-bottom: 16px;
