--- a/pages/platforms/index.module.css
+++ b/pages/platforms/index.module.css
@@ -3,7 +3,15 @@
 }
 .content {
   border-bottom: 2px solid #393939;
+  position: relative;
 }
+
+/* .svgContainer{ */
+  /* position: absolute; */
+  /* position: absolute;
+  left: 150px; */
+/* background-color: cornflowerblue; */
+/* } */
 
 .desc {
   color: var(--preset-color);
@@ -11,4 +19,10 @@
   font-family: var(--font-roboto-mono);
   font-size: 16px;
   line-height: 1.6;
+}
+/* delete props */
+.content:hover,
+.content.hovered {
+  /* background-color: aquamarine; */
+  cursor: pointer;
 }
